--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Upload Cargo Manifest</h1>
+    <h1>Gen FFM Form PDF</h1>
     <form method="post" enctype="multipart/form-data">
       <input type="file" name="manifest" accept="application/pdf" required>
       <button type="submit">Convert</button>
